--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'IranSans';
+  src: url('/public/fonts/sansx_regular.ttf') format('ttf');
+}
+
+@layer utilities {
+  .clip-custom {
+    clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+
+  }
+}
+
+@layer utilities {
+  .border-b-double-color {
+    position: relative;
+    border-bottom: 4px solid transparent;
+  }
+
+  .border-b-double-color::before {
+    content: "";
+    position: absolute;
+    bottom: -4px; 
+    left: 0;
+    width: 100%;
+    height: 4px; 
+    background: linear-gradient(to right, rgb(102, 231, 102) 80%, rgb(167, 51, 167) 50%);
+  }
+}
